@@ -32,6 +32,11 @@ Show a list of spectrum configurations (and their corresponding instances with P
 Reload given spectrum configurations.
 .sp
 .RE
+\fBstats\fR
+.RS 4
+Print current usage statistics.
+.sp
+.RE
 \fBhelp\fR
 .RS 4
 Show the help message, alias for \fI\-\-help\fR.
